--- a/git-sources/tiny/diff-test.yaml
+++ b/git-sources/tiny/diff-test.yaml
@@ -19,11 +19,11 @@ spec:
       - ApplyOutOfSyncOnly=false
       - ServerSideApply=false
       - RespectIgnoreDifferences=true
-  ignoreDifferences:
-    - kind: ClusterRole
-      group: rbac.authorization.k8s.io
-      jsonPointers:
-        - /rules
+#  ignoreDifferences:
+#    - kind: ClusterRole
+#      group: rbac.authorization.k8s.io
+#      jsonPointers:
+#        - /rules
   source:
     path: resources/diff-test
     repoURL: https://github.com/yaroslav-codefresh/scale-test
