--- a/git-sources/tiny/diff-test.yaml
+++ b/git-sources/tiny/diff-test.yaml
@@ -8,8 +8,8 @@ spec:
   syncPolicy:
     automated:
       allowEmpty: true
-      prune: true
-      selfHeal: true
+      prune: false
+      selfHeal: false
     syncOptions:
       - PrunePropagationPolicy=foreground
       - Replace=false
