--- a/git-sources/tiny/diff-test.yaml
+++ b/git-sources/tiny/diff-test.yaml
@@ -1,34 +1,34 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: diff-test
-  finalizers:
-    - resources-finalizer.argocd.argoproj.io/foreground
-spec:
-  syncPolicy:
-    automated:
-      allowEmpty: true
-      prune: false
-      selfHeal: false
-    syncOptions:
-      - PrunePropagationPolicy=foreground
-      - Replace=false
-      - PruneLast=false
-      - Validate=true
-      - CreateNamespace=true
-      - ApplyOutOfSyncOnly=false
-      - ServerSideApply=false
-      - RespectIgnoreDifferences=true
-  ignoreDifferences:
-    - group: "*"
-      kind: "*"
-      managedFieldsManagers:
-        - kubectl-client-side-apply
-  source:
-    path: resources/diff-test
-    repoURL: https://github.com/yaroslav-codefresh/scale-test
-    targetRevision: HEAD
-  project: default
-  destination:
-    name: in-cluster
-    namespace: test-diff
+#apiVersion: argoproj.io/v1alpha1
+#kind: Application
+#metadata:
+#  name: diff-test
+#  finalizers:
+#    - resources-finalizer.argocd.argoproj.io/foreground
+#spec:
+#  syncPolicy:
+#    automated:
+#      allowEmpty: true
+#      prune: false
+#      selfHeal: false
+#    syncOptions:
+#      - PrunePropagationPolicy=foreground
+#      - Replace=false
+#      - PruneLast=false
+#      - Validate=true
+#      - CreateNamespace=true
+#      - ApplyOutOfSyncOnly=false
+#      - ServerSideApply=false
+#      - RespectIgnoreDifferences=true
+#  ignoreDifferences:
+#    - group: "*"
+#      kind: "*"
+#      managedFieldsManagers:
+#        - kubectl-client-side-apply
+#  source:
+#    path: resources/diff-test
+#    repoURL: https://github.com/yaroslav-codefresh/scale-test
+#    targetRevision: HEAD
+#  project: default
+#  destination:
+#    name: in-cluster
+#    namespace: test-diff
