--- a/git-sources/promotable-gs/promotion-template.yaml
+++ b/git-sources/promotable-gs/promotion-template.yaml
@@ -20,6 +20,4 @@ spec:
         - $.appVersion
     - values.yaml:
       jsonPaths:
-        - $.buslog.image.tag
-        - $.ctrlr.image.tag
-        - $.flask-ui.image.tag
+        - $.image.tag
