--- a/git-sources/promotable-gs/promotion-template.yaml
+++ b/git-sources/promotable-gs/promotion-template.yaml
@@ -17,6 +17,7 @@ spec:
         - $.version
     Chart.yaml:
       jsonPaths:
+        - $.version
         - $.appVersion
     values.yaml:
       jsonPaths:
