--- a/product-charts/prod/templates/deployment.yaml
+++ b/product-charts/prod/templates/deployment.yaml
@@ -14,7 +14,11 @@ spec:
   strategy:
     canary:
       steps:
+        - setWeight: 25
+        - pause: {duration: 15}
         - setWeight: 50
+        - pause: {duration: 15}
+        - setWeight: 75
         - pause: {duration: 15}
   selector:
     matchLabels:
