--- a/product-charts/prod/Chart.yaml
+++ b/product-charts/prod/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: prod
+name: dev
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
@@ -20,4 +20,4 @@ version: 0.3.2
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
-appVersion: "3.5"
+appVersion: "3.6"
