--- a/product-charts/prod/templates/service.yaml
+++ b/product-charts/prod/templates/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "dev.fullname" . }}
+  name: {{ template "prod.fullname" . }}
   labels:
-    app: {{ template "dev.name" . }}
-    chart: {{ template "dev.chart" . }}
+    app: {{ template "prod.name" . }}
+    chart: {{ template "prod.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 spec:
@@ -15,5 +15,5 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app: {{ template "dev.name" . }}
+    app: {{ template "prod.name" . }}
     release: {{ .Release.Name }}
