Added/Modified git-sources/promotable-gs/dev.yaml

--- a/git-sources/promotable-gs/dev.yaml
+++ b/git-sources/promotable-gs/dev.yaml
@@ -24,7 +24,7 @@ spec:
       - PrunePropagationPolicy=foreground
       - Replace=false
       - PruneLast=false
-      - Validate=false
+      - Validate=true
       - CreateNamespace=true
       - ApplyOutOfSyncOnly=false
       - ServerSideApply=false
