--- a/git-sources/promotable-gs/dev.yaml
+++ b/git-sources/promotable-gs/dev.yaml
@@ -5,7 +5,7 @@ metadata:
   finalizers:
     - resources-finalizer.argocd.argoproj.io/foreground
   annotations:
-    codefresh.io/product: promotable-app
+    codefresh.io/product: promotable-app-1
 spec:
   project: default
   source:
