--- a/git-sources/promotable-gs/dev.yaml
+++ b/git-sources/promotable-gs/dev.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: dev-promotable-app
+  name: dev-promotable-app-1
   finalizers:
     - resources-finalizer.argocd.argoproj.io/foreground
   annotations:
