--- a/git-sources/promotable-gs/prod.yaml
+++ b/git-sources/promotable-gs/prod.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: prod-promotable-app
+  name: prod-promotable-app-1
   annotations:
     "codefresh.io/product": promotable-app-1
   finalizers:
